[tool.poetry]
name = "prosper-auto-invest"
version = "0.1.0"
description = ""
authors = ["Graham Tibbitts <graham.tibbitts@gmail.com>"]
readme = "README.md"
packages = [{include = "prosper_auto_invest"}]
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Office/Business :: Financial :: Investment",
]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
prosper-api = "^0.1.0"
autohooks = "^23.7.0"
pytz = "^2023.3.post1"
humanize = "^4.8.0"
backoff = "^2.2.1"
ratelimit = "^2.2.1"
keyring = "^24.2.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
pytest-mock = "^3.11.1"
pytest-sugar = "^0.9.7"
autohooks = "^23.7.0"
autohooks-plugin-black = "^23.7.0"
autohooks-plugin-pytest = "^23.4.0"

[tool.autohooks]
mode = "pythonpath"
pre-commit = ["autohooks.plugins.black", "autohooks.plugins.pytest"]

[tool.autohooks.plugins.tox]
arguments = "-s"

[tool.pytest.ini_options]
addopts = "--cov=prosper_auto_invest --cov-report=term-missing --cov-fail-under=0"
testpaths = "tests"
python_functions = ["*_test", "test_*"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
prosper-bot="prosper_auto_invest.bot.bot:do_run"